# eyerobotarm

./: .gitignore  CLAUDE.md  preview.sh  run.sh  start.sh  test_arm.sh
CAD/: Glasses.SLDASM  Glasses.SLDPRT  raspberry-pi-camera-v2.SLDPRT
glasses_detection/: apriltags_detection.py
pi_scripts/: stream_camera.py
provided_code/: HomographyMatrix.npy  getTransformationMatrix_linux.py
ros2_ws/launch/: system.launch.py
ros2_ws/scripts/: HomographyMatrix.npy  getTransformationMatrix_linux.py  preview.sh  run.sh  test_arm.sh
ros2_ws/src/camera_pipeline/: README.md  package.xml  setup.py
ros2_ws/src/camera_pipeline/camera_pipeline/: apriltag_gaze_node.py  apriltag_workspace_node.py  arm_detection_node.py  gaze_camera_node.py  object_detection_node.py  preview_node.py  recorder_node.py  status_node.py  workspace_camera_node.py
ros2_ws/src/dobot_arm/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/dobot_arm/dobot_arm/: dobot_arm_node.py  dobot_hardware.py
ros2_ws/src/pick_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/pick_interfaces/msg/: ObjectDetection.msg  RobotPose.msg  TagDetection.msg  TagDetectionArray.msg
ros2_ws/src/pick_interfaces/srv/: GripperControl.srv  MoveJoints.srv  MoveToXYZ.srv  PickAndPlace.srv  SetSpeed.srv
ros2_ws/src/task_coordinator/: README.md  package.xml  setup.py
ros2_ws/src/task_coordinator/task_coordinator/: task_coordinator_node.py
