<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_pipeline</name>
  <version>0.0.1</version>
  <description>Camera nodes and object detection (wraps provided_code/pickCVBlock.py).</description>
  <maintainer email="andriibessarab@gmail.com">team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>apriltag_msgs</depend>
  <depend>pick_interfaces</depend>

  <!-- Python runtime dependencies used by arm_detection_node.py -->
  <exec_depend>numpy</exec_depend>
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>pupil-apriltags</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
